{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 35,
  "lineage": "7eb2809b-4274-51fc-0613-01a9379b77a8",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-23T08:29:00.854-08:00",
            "deny": [],
            "description": "Allow HTTP/HTTPS access to the instance",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sds-project-2025/global/firewalls/nem2p-instance-allow-http",
            "log_config": [],
            "name": "nem2p-instance-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/sds-project-2025/global/networks/default",
            "priority": 1000,
            "project": "sds-project-2025",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sds-project-2025/global/firewalls/nem2p-instance-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "nem2p-instance-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-23T08:29:00.826-08:00",
            "deny": [],
            "description": "Allow SSH access to the instance",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sds-project-2025/global/firewalls/nem2p-instance-allow-ssh",
            "log_config": [],
            "name": "nem2p-instance-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/sds-project-2025/global/networks/default",
            "priority": 1000,
            "project": "sds-project-2025",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sds-project-2025/global/firewalls/nem2p-instance-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "nem2p-instance-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260210",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sds-project-2025/zones/us-central1-a/disks/nem2p-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "environment": "dev",
              "managed-by": "terraform"
            },
            "enable_display": false,
            "id": "projects/sds-project-2025/zones/us-central1-a/instances/nem2p-instance",
            "instance_id": "3427391524553440930",
            "label_fingerprint": "hsdicuxnyEw=",
            "labels": {
              "environment": "dev",
              "managed-by": "terraform"
            },
            "machine_type": "e2-micro",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "PZX45BVTMVI=",
            "metadata_startup_script": "#!/bin/bash\n\napt-get update \u0026\u0026 apt-get install -y docker.io\nsleep 10\ndocker run -d -p 80:80 nginx\n",
            "name": "nem2p-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "136.114.252.106",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sds-project-2025/global/networks/default",
                "network_ip": "10.128.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sds-project-2025/regions/us-central1/subnetworks/default",
                "subnetwork_project": "sds-project-2025"
              }
            ],
            "project": "sds-project-2025",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sds-project-2025/zones/us-central1-a/instances/nem2p-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "nem2p-instance-server"
            ],
            "tags_fingerprint": "pLz2KzkezOs=",
            "terraform_labels": {
              "environment": "dev",
              "managed-by": "terraform"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}